--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,11 +25,11 @@ jobs:
         cache: maven
 
     - name: Build Application JAR
-      working-directory: ./RestWithSpringBoot3.0/22_DockerizingOurApp/rest-with-spring-boot-udemy
+      working-directory: ./22_DockerizingOurApp/rest-with-spring-boot-udemy
       run: mvn clean package
 
     - name: Docker Compose Build
-      working-directory: ./RestWithSpringBoot3.0/22_DockerizingOurApp
+      working-directory: ./22_DockerizingOurApp
       run: docker compose build
 
     - name: Push to Docker Hub Container Registry
