--- a/22_DockerizingOurApp/docker-compose.yml
+++ b/22_DockerizingOurApp/docker-compose.yml
@@ -23,8 +23,8 @@ services:
   rest-with-spring-boot-udemy:
     image: lduran355/rest-with-spring-boot-udemy
     restart: always
-    build: ./RestWithSpringBoot3.0
-    working_dir: /RestWithSpringBoot3.0
+    build: ./rest-with-spring-boot-udemy
+    working_dir: /rest-with-spring-boot-udemy
     environment:
       TZ: America/Sao_Paulo
       SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
