Dockerizing our Application

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,63 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/test-classes/application.yml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.unittests.mockito.services.PersonServicesTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.unittests.mockito.services.BookServicesTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.unittests.mapper.DozerConverterTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.swagger.SwaggerIntegrationTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.repositories.PersonRepositoryTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withyaml.PersonControllerYamlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withyaml.PersonControllerCorsYamlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withyaml.BookControllerYamlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withyaml.BookControllerCorsYamlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withyaml.AuthControllerYamlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withxml.PersonControllerXmlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withxml.PersonControllerCorsXmlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withxml.BookControllerXmlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withxml.BookControllerCorsXmlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withxml.AuthControllerXmlTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withjson.PersonControllerJsonTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withjson.PersonControllerCorsJsonTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withjson.BookControllerJsonTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withjson.BookControllerCorsJsonTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/TEST-br.com.llduran.integrationtests.controller.withjson.AuthControllerJsonTest.xml
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.unittests.mockito.services.PersonServicesTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.unittests.mockito.services.BookServicesTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.unittests.mapper.DozerConverterTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.swagger.SwaggerIntegrationTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.repositories.PersonRepositoryTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withyaml.PersonControllerYamlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withyaml.PersonControllerCorsYamlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withyaml.BookControllerYamlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withyaml.BookControllerCorsYamlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withyaml.AuthControllerYamlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withxml.PersonControllerXmlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withxml.PersonControllerCorsXmlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withxml.BookControllerXmlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withxml.BookControllerCorsXmlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withxml.AuthControllerXmlTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withjson.PersonControllerJsonTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withjson.PersonControllerCorsJsonTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withjson.BookControllerJsonTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withjson.BookControllerCorsJsonTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/surefire-reports/br.com.llduran.integrationtests.controller.withjson.AuthControllerJsonTest.txt
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/rest-with-spring-boot-udemy-0.0.1-SNAPSHOT.jar.original
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/maven-archiver/pom.properties
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V9__Create_Table_User_Permission.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V8__Insert_Data_In_Users.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V7__Create_Table_Users.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V6__Insert_Data_In_Permission.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V5__Create_Table_Permission.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V4__Insert_Data_In_Books.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V3__Create_Table_Books.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V2__Populate_Table_Person.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V1__Create_Table_Person.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V12__Populate_Person_With_Many.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V11__Alter_Table_Person.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/db/migration/V10__Insert_Data_In_User_Permission.sql
+22_DockerizingOurApp/rest-with-spring-boot-udemy/target/classes/application.yml
