--- a/22_DockerizingOurApp/docker-compose.yml
+++ b/22_DockerizingOurApp/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     working_dir: /rest-with-spring-boot-udemy
     environment:
       TZ: America/Sao_Paulo
-      SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
+      SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
       SPRING.DATASOURCE.USERNAME: root
       SPRING.DATASOURCE.PASSWORD: admin123
     ports:
