--- a/22_DockerizingOurApp/rest-with-spring-boot-udemy/src/main/resources/application.yml
+++ b/22_DockerizingOurApp/rest-with-spring-boot-udemy/src/main/resources/application.yml
@@ -12,7 +12,7 @@ security:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3308/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3308/rest_with_spring_boot?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
     username: root
     password: admin123
   jpa:
